--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                <img src="images/encomiendas.png" width="1000px" alt="norteinti" class="img-fluid">
           </div>
           <div class="col-md-4">
-              <h1 class="text-light">S. Encomiendas</h1>
+              <h1 class="text-light">Enco S.</h1>
               <h2 class="text-light">Desarollado en PHP, Vanilla JavaScript, Boostrap, Ajax.</h2>
             
               <br>
