--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/estilos.css">
+    <script charset="UTF-8" src="//web.webpushs.com/js/push/69e8e6c856c80d400b7602aaa7ad086a_1.js" async></script>
 
 
     <title>Jeason Cueva</title>
