arreglando cagadas que pusieron chupapingas de mrd

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <!-- Descripcion en la web-->
-    <meta name="description" content="Jeason Cueva, este es mi portafolio, estoy muy alegre que estes aquí, por cierto me encanta una chica llamada Sheyla❤️.">
+    <meta name="description" content="Jeason Cueva, este es mi portafolio, estoy muy alegre que estes aquí.">
     <!--Meta de compatibilidad con el navegador EDGE-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!--Meta para el autor del sitio web-->
